# NuOscillator

./: .gitignore  Analysis.cpp  Analysis_8cpp.html  Analysis_8cpp__incl.map  Analysis_8cpp__incl.md5  BuildPreReqs.sh  CMakeLists.txt  CompareOscillationProbabilities_8cpp.html  CompareOscillationProbabilities_8cpp__incl.map  CompareOscillationProbabilities_8cpp__incl.md5  Doxyfile  DragRace.cpp  DragRace_8cpp.html  DragRace_8cpp__incl.map  DragRace_8cpp__incl.md5  IndependentNSIProbCalcer.py  InpedependentNSIProbCalcer.py  LICENSE  LegacyModeExample_8cpp.html  LegacyModeExample_8cpp__incl.map  LegacyModeExample_8cpp__incl.md5  MakeExampleBinning_8cpp.html  MakeExampleBinning_8cpp__incl.map  MakeExampleBinning_8cpp__incl.md5  Makefile  MassifNuOscillator.txt  Notes  OscProbCalcerBase.cpp  OscProbCalcerBase.h  OscProbCalcerBase_8cpp.html  OscProbCalcerBase_8cpp__incl.map  OscProbCalcerBase_8cpp__incl.md5  OscProbCalcerBase_8h.html  OscProbCalcerBase_8h__dep__incl.map  OscProbCalcerBase_8h__dep__incl.md5  OscProbCalcerBase_8h__incl.map  OscProbCalcerBase_8h__incl.md5  OscProbCalcerBase_8h_source.html  OscProbCalcerComparison_8cpp.html  OscProbCalcerComparison_8cpp__incl.map  (+386 more)
.github/: CODEOWNERS
.github/TestOutputs/: CHICLinear_Stored.txt  CUDAProb3Linear_Stored.txt  GLoBESLinear_BinnedOscillator_Stored.txt  NuFASTLinear_Stored.txt  NuSQUIDSLinear_Stored.txt  NuSQUIDSLinear_UnbinnedOscillator_NSI_Stored.txt  OscLibLinear_Stored.txt  OscProbLinear_Stored.txt  OscProb_BinnedOscillator_Stored.txt  OscProb_UnbinnedOscillator_NSI_Stored.txt  Prob3ppLinear_Stored.txt  RemakeInputs.sh
.github/workflows/: Benchmark.yml  BumpVersion.yml  CDImage.yml  CIBuild.yml  CIValidations.yml  CIValidations2.yml  Doxygen.yml  Linter.yml  WeeklyValgrind.yml
Apps/: Analysis.cpp  CMakeLists.txt  CompareOscillationProbabilities.cpp  DragRace.cpp  LegacyModeExample.cpp  MakeExampleBinning.cpp  Makefile  OscProbCalcerComparison.cpp  SingleOscProbCalcer.cpp  SingleOscillator.cpp
Configs/: Binned_CUDAProb3.yaml  Binned_CUDAProb3Linear.yaml  Binned_NuFASTLinear.yaml  Binned_OscProb.yaml  Binned_OscProbLinear.yaml  Binned_Prob3ppLinear.yaml  Binned_ProbGPULinear.yaml  CUDAProb3_Binned-SelfContainedFile.yaml  NuFAST_Testing.yaml  Prob3ppLinear_Binned-SelfContainedFile.yaml  ProbGPULinear_Binned-SelfContainedFile-MultipleInstances.yaml  ProbGPULinear_Binned-SelfContainedFile.yaml  SubSampling_NuFASTLinear.yaml  Unbinned_CUDAProb3.yaml  Unbinned_CUDAProb3Linear.yaml  Unbinned_NuFASTLinear.yaml  Unbinned_NuSQUIDSLinear.yaml  Unbinned_OscProb.yaml  Unbinned_OscProbLinear.yaml  Unbinned_Prob3ppLinear.yaml  Unbinned_ProbGPULinear.yaml
Configs/OscProbCalcerConfigs/: CUDAProb3.yaml  CUDAProb3Linear.yaml  NuFASTLinear.yaml  NuFASTLinear_Testing.yaml  OscProb.yaml  Prob3ppLinear.yaml  ProbGPULinear.yaml
Constants/: OscillatorConstants.h
Docs/: Notes  logo.py
Inputs/: ExampleAtmosphericBinning.root  OscProb_prem_4+1layers.txt  SubSamplingBinningTemplate.root
NuOscillatorConfigs/: Binned_CHIC.yaml  Binned_CHICLinear.yaml  Binned_CUDAProb3.yaml  Binned_CUDAProb3Linear.yaml  Binned_GLoBESLinear.yaml  Binned_NuFASTEarth.yaml  Binned_NuFASTLinear.yaml  Binned_NuSQUIDSLinear.yaml  Binned_NuSQUIDSLinear_NSI.yaml  Binned_OscLibLinear.yaml  Binned_OscProb.yaml  Binned_OscProbLinear.yaml  Binned_OscProbLinear_NSI.yaml  Binned_Prob3ppLinear.yaml  Binned_ProbGPULinear.yaml  Binned_nuTens.yaml  ExampleOscillationParameters.yaml  SubSampling_CUDAProb3.yaml  SubSampling_OscProb.yaml  Unbinned_CHIC.yaml  Unbinned_CHICLinear.yaml  Unbinned_CUDAProb3.yaml  Unbinned_CUDAProb3Linear.yaml  Unbinned_GLoBESLinear.yaml  Unbinned_NuFASTEarth.yaml  Unbinned_NuFASTLinear.yaml  Unbinned_NuSQUIDSLinear.yaml  Unbinned_OscLib.yaml  Unbinned_OscLibLinear.yaml  Unbinned_OscProb.yaml  Unbinned_OscProbLinear.yaml  Unbinned_Prob3ppLinear.yaml  Unbinned_ProbGPULinear.yaml  Unbinned_nuTens.yaml
NuOscillatorConfigs/OscProbCalcerConfigs/: CHIC.yaml  CHICLinear.yaml  CUDAProb3.yaml  CUDAProb3Linear.yaml  GLoBESLinear.yaml  NuFASTEarth.yaml  NuFASTLinear.yaml  NuSQUIDSLinear.yaml  OscLibLinear.yaml  (+4 more)
OscProbCalcer/: CMakeLists.txt  Makefile  OscProbCalcerBase.cpp  OscProbCalcerBase.h  OscProbCalcerFactory.cpp  OscProbCalcerFactory.h  OscProbCalcer_CHIC.cpp  OscProbCalcer_CHIC.h  OscProbCalcer_CHICLinear.cpp  OscProbCalcer_CHICLinear.h  OscProbCalcer_CUDAProb3.cpp  OscProbCalcer_CUDAProb3.h  OscProbCalcer_CUDAProb3Linear.cpp  OscProbCalcer_CUDAProb3Linear.h  OscProbCalcer_GLoBESLinear.cpp  OscProbCalcer_GLoBESLinear.h  OscProbCalcer_NuFASTEarth.cpp  OscProbCalcer_NuFASTEarth.h  OscProbCalcer_NuFASTLinear.cpp  OscProbCalcer_NuFASTLinear.h  OscProbCalcer_NuSQUIDSLinear.cpp  OscProbCalcer_NuSQUIDSLinear.h  OscProbCalcer_OscLib.cpp  OscProbCalcer_OscLib.h  OscProbCalcer_OscLibLinear.cpp  OscProbCalcer_OscLibLinear.h  OscProbCalcer_OscProb.cpp  OscProbCalcer_OscProb.h  OscProbCalcer_Prob3ppLinear.cpp  OscProbCalcer_Prob3ppLinear.h  OscProbCalcer_ProbGPULinear.cpp  OscProbCalcer_ProbGPULinear.h  OscProbCalcer_nuTensLinear.cpp  OscProbCalcer_nuTensLinear.h
Oscillator/: CMakeLists.txt  Makefile  OscillatorBase.cpp  OscillatorBase.h  OscillatorBinned.cpp  OscillatorBinned.h  OscillatorFactory.cpp  OscillatorFactory.h  OscillatorSubSampling.cpp  OscillatorSubSampling.h  OscillatorUnbinned.cpp  OscillatorUnbinned.h
configs/: Binned_CUDAProb3.yaml  Binned_CUDAProb3Linear.yaml  Binned_Prob3ppLinear.yaml  Binned_ProbGPULinear.yaml  CUDAProb3_Binned-SelfContainedFile.yaml  Unbinned_CUDAProb3.yaml  Unbinned_CUDAProb3Linear.yaml  Unbinned_Prob3ppLinear.yaml  Unbinned_ProbGPULinear.yaml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+43 more)
(+24 files in other folders)
